--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "description": "",
   "scripts": {
     "preinstall": "npx npm-force-resolutions@0.0.3",
-    "dev": "nodemon --exec babel-node server",
+    "dev": "nodemon --exec babel-node src/server",
     "migrate": "npx prisma migrate dev",
-    "studio": "npx prisma studio"
+    "studio": "npx prisma studio",
+    "build": "babel src --out-dir build",
+    "start": "node build/server"
   },
   "repository": {
     "type": "git",
@@ -20,6 +22,7 @@
   },
   "homepage": "https://github.com/hyhy425/nomadcoffee-backend#readme",
   "dependencies": {
+    "@babel/cli": "^7.17.6",
     "@prisma/client": "^3.11.1",
     "apollo-server": "^2.25.2",
     "apollo-server-express": "^2.19.2",
@@ -33,6 +36,7 @@
   "devDependencies": {
     "@babel/core": "^7.17.8",
     "@babel/node": "^7.16.8",
+    "@babel/plugin-transform-runtime": "^7.17.0",
     "@babel/preset-env": "^7.16.11",
     "nodemon": "^2.0.15",
     "prisma": "^3.11.1"
